feat(concurrency): expand question bank to 30 questions with cross-links
Add 7 new canonical questions (+2 Intermediate, +3 Senior, +2 Scenarios)
covering structured concurrency, VarHandle access modes, lock-free ABA
prevention, virtual thread carrier pinning, LongAdder striping, pool
starvation deadlock, and async context propagation with compilable examples.

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>